Implementa validação de login

--- a/login.html
+++ b/login.html
@@ -11,15 +11,17 @@
 <body>
     <main>
         <h1>Faça login</h1>
-     <form>
+     <form name="login" onsubmit="return validaFormulario()">
         <div class="form-group">
             <label for="email">E-mail:</label>
             <input type="email" required id="email" placeholder="Exemplo@gmail.com"/>
+            <span class="mensage-error email"></span>
         </div>
 
         <div class="form-group">
             <label for="senha">Senha: </label>
             <input type="password" required id="senha" name="senha"/>
+            <span class="mensage-error senha"></span>
         </div>
 
         <button type="subimt" class="button-login">Entrar <i class="fa fa-sing-in"></i></button>
@@ -29,5 +31,7 @@
             <span>Não possui cadastro ? <a href="registro.html">Crie sua conta</a></span>
         </div>
     </main>
+
+    <script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
