--- a/registro.html
+++ b/registro.html
@@ -15,25 +15,25 @@
             <div class="form-group">
                 <label for="nome">Nome</label>
                 <input type="text" id="nome" name="nome" required placeholder="Exemplo" />
-                <span class="menssage-error nome"></span>
+                <span class="mensage-error nome"></span>
             </div>
 
             <div class="form-group">
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" placeholder="Exemplo@gmail.com"/>
-                <span class="menssage-error email"></span>
+                <span class="mensage-error email"></span>
             </div>
 
             <div class="form-group">
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" name="senha" required/>
-                <span class="menssage-error senha"></span>
+                <span class="mensage-error senha"></span>
             </div>
 
             <div class="form-group">
                 <label for="confirme-senha">Repita sua senha:</label>
                 <input type="password" id="confirme-senha" name="confirme-senha" required/>
-                <span class="menssage-error confirme-senha"></span>
+                <span class="mensage-error confirme-senha"></span>
             </div>
 
             <button class="button-login">Cadastrar <i class="fa fa-floppy-o"></i></button>
